# UnrealMCP

./: .gitignore  .mcp.json.example  EPIC_MCP_HARVEST.md  LICENSE  README.md  REFERENCE_MOCAP_PIPELINE.md  pyproject.toml
scripts/: smoke_connect.py
src/unreal_mcp/: __init__.py  __main__.py  config.py  editor_client.py  server.py
src/unreal_mcp/snippets/: __init__.py  asset_ops.py  asset_search.py  automation_tests.py  cinematic.py  config_settings.py  cr_seq.py  delete_actors.py  editor_extra.py  eyes.py  film.py  get_level_actors.py  get_status.py  live_coding.py  move_actor.py  open_level.py  retarget.py  run_console_command.py  save_level.py  seq_keyframe.py  set_property.py  spawn_actor.py  viewport.py
