[project]
name = "unreal-mcp"
version = "0.1.0"
description = "Self-owned MCP server controlling the Unreal Engine 5.7 editor via Python Remote Execution"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2,<2",
]

[project.scripts]
unreal-mcp = "unreal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unreal_mcp"]
